# minesweeper

./: CMakeLists.txt  display_text.h  funcs.h  main.cpp  popup.cpp  popup.h  singular_box.cpp  singular_box.h  slidebar.cpp  slidebar.h  table_box.cpp  table_box.h  toolbox.cpp  toolbox.h
